crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__bad-array-declaration_S263.f90_false.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/style/S263.f90:3:9: S263 Bad declaration of array
  |
1 | program test
2 |   implicit none (external, type)
3 |   real, dimension(2) :: x, y = [4, 2], z
  |         ^^^^^^^^^^^^ S263
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
5 |   integer, dimension(2), parameter :: p = [1, 2]
  |
  = help: Remove `dimension` attribute from declaration

./resources/test/fixtures/style/S263.f90:5:12: S263 Bad declaration of array
  |
3 |   real, dimension(2) :: x, y = [4, 2], z
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
5 |   integer, dimension(2), parameter :: p = [1, 2]
  |            ^^^^^^^^^^^^ S263
6 |   integer, parameter :: q(2) = [1, 2]
7 | end program test
  |
  = help: Remove `dimension` attribute from declaration
