crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__bad-array-declaration_S263.f90_keep.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---

