crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__bad-array-declaration_S263.f90_true.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/style/S263.f90:4:11: S263 Bad declaration of array
  |
2 |   implicit none (external, type)
3 |   real, dimension(2) :: x, y = [4, 2], z
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
  |           ^^^^ S263
5 |   integer, dimension(2), parameter :: p = [1, 2]
6 |   integer, parameter :: q(2) = [1, 2]
  |
  = help: Add `dimension` attribute to declaration

./resources/test/fixtures/style/S263.f90:4:17: S263 Bad declaration of array
  |
2 |   implicit none (external, type)
3 |   real, dimension(2) :: x, y = [4, 2], z
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
  |                 ^^^^^^^^^^^^^ S263
5 |   integer, dimension(2), parameter :: p = [1, 2]
6 |   integer, parameter :: q(2) = [1, 2]
  |
  = help: Add `dimension` attribute to declaration

./resources/test/fixtures/style/S263.f90:4:32: S263 Bad declaration of array
  |
2 |   implicit none (external, type)
3 |   real, dimension(2) :: x, y = [4, 2], z
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
  |                                ^^^^^^^ S263
5 |   integer, dimension(2), parameter :: p = [1, 2]
6 |   integer, parameter :: q(2) = [1, 2]
  |
  = help: Add `dimension` attribute to declaration

./resources/test/fixtures/style/S263.f90:6:25: S263 Bad declaration of array
  |
4 |   real :: a(1), b(2) = [4, 2], c(3, 4)
5 |   integer, dimension(2), parameter :: p = [1, 2]
6 |   integer, parameter :: q(2) = [1, 2]
  |                         ^^^^^^^^^^^^^ S263
7 | end program test
  |
  = help: Add `dimension` attribute to declaration
