crates/fortitude_linter/src/rules/style/snapshots/fortitude_linter__rules__style__tests__bad-quote-string_S241.f90_include_inout_goto.snap
---
source: crates/fortitude_linter/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
S241 [*] String uses double quotes but single quotes preferred
 --> ./resources/test/fixtures/style/S241.f90:4:12
  |
2 |   implicit none (type, external)
3 |
4 |   print *, "Hello, World!"
  |            ^^^^^^^^^^^^^^^
5 |   print *, 'Hello, World!'
6 |   print *, 'Hello, "World"!'
  |
help: Replace double quotes with single quotes
1 | program p
2 |   implicit none (type, external)
3 |
  -   print *, "Hello, World!"
4 |   print *, 'Hello, World!'
5 +   print *, 'Hello, World!'
6 |   print *, 'Hello, "World"!'
7 |   print *, "Hello, ""World""!"
8 |   print *, 'Hello, ''World''!'

S241 String uses double quotes but single quotes preferred
 --> ./resources/test/fixtures/style/S241.f90:7:12
  |
5 |   print *, 'Hello, World!'
6 |   print *, 'Hello, "World"!'
7 |   print *, "Hello, ""World""!"
  |            ^^^^^^^^^^^^^^^^^^^
8 |   print *, 'Hello, ''World''!'
9 |   print *, "Hello, &
  |

S241 [*] String uses double quotes but single quotes preferred
  --> ./resources/test/fixtures/style/S241.f90:9:12
   |
 7 |     print *, "Hello, ""World""!"
 8 |     print *, 'Hello, ''World''!'
 9 |     print *, "Hello, &
   |  ____________^
10 | |             & World!"
   | |_____________________^
11 |     print *, 'Hello, &
12 |               & World!'
   |
help: Replace double quotes with single quotes
6  |   print *, 'Hello, "World"!'
7  |   print *, "Hello, ""World""!"
8  |   print *, 'Hello, ''World''!'
   -   print *, "Hello, &
   -             & World!"
9  |   print *, 'Hello, &
10 |             & World!'
11 |   print *, 'Hello, &
12 +             & World!'
13 +   print *, 'Hello, &
14 |             & "World"!'
15 |   print *, "Hello, &
16 |             & ""World""!"

S241 String uses double quotes but single quotes preferred
  --> ./resources/test/fixtures/style/S241.f90:15:12
   |
13 |     print *, 'Hello, &
14 |               & "World"!'
15 |     print *, "Hello, &
   |  ____________^
16 | |             & ""World""!"
   | |_________________________^
17 |     print *, 'Hello, &
18 |               & ''World''!'
   |
